# mofscreen_release

./: LICENSE  README.md  USER_GUIDE.md  mofscreen-1.0.1-py3-none-any.whl  pyproject.toml
examples/: batch_screening.py  run_adsorption_only.py  run_all.py  run_bandgap_only.py
